Fix: To avoid overlap with other header elements in TV layout, prevent moving section tabs upwards, and retain the default behaviour. By default on TV layout, this shift happens when the width is greater than 100em.

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -198,7 +198,7 @@ h1 {
     font-size: 1.25em;
 }
 
-.emby-scrollbuttons-button.paper-icon-button-light > .material-icons {
+.emby-scrollbuttons-button.paper-icon-button-light>.material-icons {
     font-size: 1.5em;
     place-content: center;
 }
@@ -986,24 +986,24 @@ div[data-role=controlgroup] a.ui-btn-active {
 }
 
 @media (min-width: 62em) {
-  .sectionTabs {
-    -webkit-align-items: center;
-    align-items: center;
-    -webkit-align-self: center;
-    align-self: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-    margin-top: -4.3em;
-    position: relative;
-    width: auto;
-  }
+    .sectionTabs:not(.layout-tv .sectionTabs) {
+        -webkit-align-items: center;
+        align-items: center;
+        -webkit-align-self: center;
+        align-self: center;
+        -webkit-justify-content: center;
+        justify-content: center;
+        margin-top: -4.3em;
+        position: relative;
+        width: auto;
+    }
 
     .libraryPage:not(.noSecondaryNavPage) {
         padding-top: 4.8em !important;
     }
 }
 
-.emby-select-withcolor > option {
-  color: inherit;
-  background-color: var(--selectorBackgroundColor);
+.emby-select-withcolor>option {
+    color: inherit;
+    background-color: var(--selectorBackgroundColor);
 }
